fix square positioning on mobile

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,11 @@ body {
   text-align: center;
 }
 
+.container{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
 .header{
   position: relative;
   left:0;
@@ -102,8 +107,10 @@ body {
   height: 500px;
   width: 500px;
   background-color: #00adb5;
-  position: relative;
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -250px 0 0 -250px;
 }
 
 .addChar {
@@ -115,12 +122,13 @@ body {
   font-family: 'Permanent Marker', cursive;
 }
 footer{
-  position: fixed;
-  bottom: 0;
+  position: relative;
+  
   width: 97.5%;
   height: 2.5rem;
   text-align: center;
 }
 .smaller-square{
   margin: auto;
+
 }
